[tool.poetry]
name = "slsim"
version = "0.1.0"
description = "Sneakily pretends to be sensing layer."
authors = ["c0c0n3"]

[tool.poetry.dependencies]
python = "^3.8"
fipy = {git = "https://github.com/c0c0n3/kitt4sme.fipy.git", rev = "0.9.0"}
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
